[gd_scene load_steps=4 format=3 uid="uid://ddud388behuax"]

[ext_resource type="Script" path="res://Scripts/level_spawner.gd" id="1_4i2wj"]
[ext_resource type="PackedScene" uid="uid://eatb8kpnr1u" path="res://Scenes/Obstacles/invisible_border.tscn" id="2_ucq5b"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_3s5vs"]
vertices = PackedVector2Array(940.109, -229.023, 948.883, 520, -362.906, 520, -356.094, -232.961)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-366, -243, 950, -239, 959, 530, -373, 530)])

[node name="LevelSpawner" type="Node2D"]
script = ExtResource("1_4i2wj")

[node name="Obstacles" type="Node" parent="."]

[node name="InvisibleBorders" type="Node" parent="Obstacles"]

[node name="InvisibleBorder" parent="Obstacles/InvisibleBorders" instance=ExtResource("2_ucq5b")]
position = Vector2(-31, 361)
scale = Vector2(1, 12)

[node name="InvisibleBorder2" parent="Obstacles/InvisibleBorders" instance=ExtResource("2_ucq5b")]
position = Vector2(1312, 350)
scale = Vector2(1, 12)

[node name="InvisibleBorder3" parent="Obstacles/InvisibleBorders" instance=ExtResource("2_ucq5b")]
position = Vector2(635, -37)
scale = Vector2(24, 1)

[node name="InvisibleBorder4" parent="Obstacles/InvisibleBorders" instance=ExtResource("2_ucq5b")]
position = Vector2(679, 749)
scale = Vector2(24, 1)

[node name="EnemySpawns" type="Node2D" parent="."]

[node name="EnemySpawnLocation1" type="Marker2D" parent="EnemySpawns"]
position = Vector2(-192, 365)

[node name="EnemySpawnLocation2" type="Marker2D" parent="EnemySpawns"]
position = Vector2(1461, 355)

[node name="EnemySpawnLocation3" type="Marker2D" parent="EnemySpawns"]
position = Vector2(627, -178)

[node name="EnemySpawnLocation4" type="Marker2D" parent="EnemySpawns"]
position = Vector2(688, 893)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
position = Vector2(350, 212)
navigation_polygon = SubResource("NavigationPolygon_3s5vs")
